fix: form align items results page

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -16,7 +16,6 @@
 }
 
 .accountContainer {
-  width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
