--- a/src/components/Search/search.module.css
+++ b/src/components/Search/search.module.css
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+.formResults {
+  align-items: flex-start;
+}
+
 .formBox {
   width: 100%;
   display: flex;
